k8s/service-clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: health-service
  labels:
    app: health-service

spec:
  type: ClusterIP  # Internal service for Ingress to route to

  selector:
    app: health-service

  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
